--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-h1{
+.h1{
     font-size: 50px;
 }
 .name-highlight{
     color: orange;
 }
 .half-width{
-    width: 40%;
+   width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+
 }
 .half-width img{
     width: 100%;
